# BASE_DU_LANGAGE_C

./: CMakeLists.txt  readme.md
TP Jour 1/: Consigne.md  ascii.c  bissextile.c  break_continue.c  calc_interactive.c  calculatrice.c  caractère.c  cercle.c  comparaison.c  compteur.c  hello.c  main.c  menu.c  moyenne.c  notes.c  operateurs.c  parite.c  rectangle.c  saisie.c  table.c  temperature.c  triangle.c  tva.c  variable.c
